# ffsplat

./: .gitignore  .gitmodules  3DGS_INRIA_ply_decoding_template.yaml  3DGS_INRIA_ply_nosh_decoding_template.yaml  3DGS_INRIA_ply_template.yaml  CODE_CONVENTIONS.md  CONTAINER_FORMAT.md  CONTRIBUTING.md  Dockerfile  Makefile  README-dev.md  README.md  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/actions/setup-python-env/: action.yml
.github/workflows/: main.yml
docs/: index.md  modules.md
src/examples/: load_ply.py
src/ffsplat/cli/: __main__.py  convert.py  eval.py  live.py  view.py
src/ffsplat/coding/: JPEGXLCoding.py  scene_decoder.py  scene_encoder.py  sog_arxiv.py
src/ffsplat/conf/format/: 3DGS_INRIA_nosh_ply.yaml  3DGS_INRIA_ply.yaml  SOG-PlayCanvas.yaml  SOG-canvas.yaml  SOG-web-nosh.yaml  SOG-web-png.yaml  SOG-web-sh-split.yaml  SOG-web.yaml
src/ffsplat/datasets/: blenderparser.py  colmapparser.py  dataparser.py  dataset.py  normalize.py
src/ffsplat/io/: ply.py
src/ffsplat/models/: attr_transforms.py  attribute.py  encoding_transform.py  exceptions.py  field.py  fields.py  gaussians.py  operations.py  transformations.py  transforms.py
src/ffsplat/render/: _renderer.py  viewer.py
src/view/: __init__.py  _renderer.py  viewer.py
tests/: test_foo.py  test_transformations.py
